// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image 1`] = `
<img
  alt="image-alt"
  className=" css-rv7724-imageStyles-imageStyles"
  src="image-src"
/>
`;

exports[`Image no border 1`] = `
<img
  alt="image-alt"
  className="noborder css-rv7724-imageStyles-imageStyles"
  src="image-src"
/>
`;
